--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   "minimum-stability": "stable",
   "autoload": {
     "psr-4": {
-      "baidu\\swagger\\": "src"
+      "baitu\\swagger\\": "src"
     }
   },
   "config": {
